# Sensor-Watch

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: alerts.py  anomalies.py  auth.py  health.py  router.py  sensor.py  websocket.py
app/core/: exceptions.py  logging.py
app/db/: pool.py
app/db/migrations/: 001_initial_schema.sql
app/db/repositories/: anomaly_repo.py  sensor_repo.py
app/detection/: inference.py  severity.py  window_buffer.py
app/models/: anomaly.py  api.py  sensor.py
app/services/: alert_publisher.py  ingest_service.py  metrics_service.py
infra/grafana/provisioning/dashboards/: anomaly_dashboard.json  dashboards.yml
infra/grafana/provisioning/datasources/: timescaledb.yml
infra/timescaledb/: init.sh
ml/model/: lstm_autoencoder.py
ml/scripts/: evaluate.py  export_onnx.py  train.py
ml/training/: threshold.py  trainer.py
simulator/: producer.py
tests/: conftest.py
tests/integration/: test_anomaly_query.py  test_sensor_ingest.py  test_websocket.py
tests/unit/: test_health.py  test_inference.py  test_preprocessor.py  test_severity.py  test_window_buffer.py
