[tool.poetry]
name = "sensorwatch"
version = "1.0.0"
description = "Time Series Anomaly Detection Pipeline — LSTM Autoencoder on NASA CMAPSS"
authors = ["SensorWatch"]
packages = [
    { include = "app" },
    { include = "ml" },
    { include = "simulator" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# API
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

# Validation & config
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# Database
asyncpg = "^0.30.0"

# Redis
redis = { extras = ["hiredis"], version = "^5.0.0" }

# ML
torch = "^2.3.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.0"
joblib = "^1.4.0"

# HTTP client (simulator)
httpx = "^0.27.0"
tenacity = "^8.3.0"

# Utilities
python-multipart = "^0.0.9"

[tool.poetry.group.export.dependencies]
onnx = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
types-requests = "^2.32.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
